objects/copado__User_Story_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>User_Story_Record_ID__c</fullName>
        <formula>copado__User_Story__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Action__c</fullName>
        <description>Action to be performed with the current metadata when committing</description>
        <inlineHelpText>Action to be performed with the current metadata when committing</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Category__c</fullName>
        <description>Represents a grouping of metadata, i.e. vlocity, cpq</description>
        <inlineHelpText>Represents a grouping of metadata, i.e. vlocity, cpq</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__JsonInformation__c</fullName>
        <description>Additional values associated with this commit</description>
        <inlineHelpText>Additional values associated with this commit</inlineHelpText>
        <label>Json Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Commit_Date__c</fullName>
        <inlineHelpText>The date when this component was last committed in the User Story.</inlineHelpText>
        <label>Last Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_API_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ModuleDirectory__c</fullName>
        <description>Folder where the metadata is allocated</description>
        <inlineHelpText>Folder where the metadata is allocated</inlineHelpText>
        <label>Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status_Icon__c</fullName>
        <formula>IMAGE(
CASE(TEXT(copado__Status__c),

&apos;Potential Conflict&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Back Promoted&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Conflict Resolved&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,

&apos;Under Review&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;On Hold&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;/s.gif&apos;),

TEXT(copado__Status__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Conflict</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Back Promoted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <description>Type of the metadata</description>
        <inlineHelpText>Type of the metadata</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Metadata</relationshipLabel>
        <relationshipName>User_Story_Metadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Metadata</label>
    <nameField>
        <label>User Story Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>